--- a/EzSchool/Views/Shared/_Layout.cshtml
+++ b/EzSchool/Views/Shared/_Layout.cshtml
@@ -88,6 +88,20 @@
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSession" aria-expanded="true" aria-controls="collapseSession">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Session's</span>
+                </a>
+                <div id="collapseSession" class="collapse" aria-labelledby="headingSession" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Configuration:</h6>
+                        @Html.ActionLink("Session", "Index", "SessionTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Programe Setting", "Index", "ProgrameSessionTables", null, new { @class = "collapse-item" })
+                    </div>
+                </div>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
