--- a/EzSchool/Views/Shared/_Layout.cshtml
+++ b/EzSchool/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("Index", "Home")">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -41,11 +41,75 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="@Url.Action("Index", "Home")">
+                <a class="nav-link" href="#">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
+
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Student Registration
+            </div>
+
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStudent" aria-expanded="true" aria-controls="collapseStudent">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Student's</span>
+                </a>
+                <div id="collapseStudent" class="collapse" aria-labelledby="headingStudent data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Student Registration:</h6>
+                        @Html.ActionLink("Students", "Index", "StudentTables", null, new { @class = "collapse-item" })
+
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Promotion:</h6>
+                        @Html.ActionLink("Student Promote", "Index", "StudentPromotTables", null, new { @class = "collapse-item" })
+
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Fee's:</h6>
+                        @Html.ActionLink("Tution Fee", "Index", "SubmissionFeeTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Annual Fee", "Index", "StudentPromotTables", null, new { @class = "collapse-item" })
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Attendance Reports:</h6>
+                        @Html.ActionLink("Student Attendance", "Index", "AttendanceTables", null, new { @class = "collapse-item" })
+
+                    </div>
+                </div>
+            </li>
+
+
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Staff Registration
+            </div>
+
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStaff" aria-expanded="true" aria-controls="collapseStaff">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Employee's</span>
+                </a>
+                <div id="collapseStaff" class="collapse" aria-labelledby="headingStaff data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Staff Registration:</h6>
+                        @Html.ActionLink("Staff", "Index", "StaffTables", null, new { @class = "collapse-item" })
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Attendance:</h6>
+                        @Html.ActionLink("Staff Attendance", "Index", "StaffAttendanceTables", null, new { @class = "collapse-item" })
+
+                </div>
+            </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider">
@@ -104,7 +168,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseClass" aria-expanded="true" aria-controls="collapseClass">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Class's'</span>
+                    <span>Class's</span>
                 </a>
                 <div id="collapseClass" class="collapse" aria-labelledby="headingClass" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
@@ -168,20 +232,49 @@
             </li>
 
             <!-- Nav Item - Charts -->
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Reports
+            </div>
+
+            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Charts", "Dashboard")">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseReport" aria-expanded="true" aria-controls="collapseReport">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span>
+                    <span>Basic Reports</span>
                 </a>
+                <div id="collapseReport" class="collapse" aria-labelledby="headingReport data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Genaral Reports:</h6>
+                        @Html.ActionLink("Student Reports", "#", "#", null, new { @class = "collapse-item" })
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Administration Reports:</h6>
+                        @Html.ActionLink("Apply Student List", "#", "#", null, new { @class = "collapse-item" })
+
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Examinations Reports:</h6>
+                        @Html.ActionLink("Print DMC", "#", "#", null, new { @class = "collapse-item" })
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Attendance Reports:</h6>
+                        @Html.ActionLink("Student Attendance", "#", "#", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Teacher Attendance", "#", "#", null, new { @class = "collapse-item" })
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Fee's' Reports:</h6>
+                        @Html.ActionLink("Annual Fee Report", "#", "#", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Student Fee Report", "#", "#", null, new { @class = "collapse-item" })
+                    </div>
+                </div>
             </li>
 
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Tables", "Dashboard")">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Session</span>
-                </a>
-            </li>
+
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
