update ko co gi

--- a/EzSchool/Views/StaffTables/Details.cshtml
+++ b/EzSchool/Views/StaffTables/Details.cshtml
@@ -65,7 +65,7 @@
         <dd>
             @{
                 string imagepath = Model.Photo;
-                <img src="@Url.Content(imagepath)" alt="Photo" style="width:100px;heigt:150px;max-width:100%;height:auto" />
+                <img src="@Url.Content(imagepath)" alt="Photo" style="width:100px;height:150px;max-width:100%;height:auto" />
             }
         </dd>
 
