--- a/EzSchool/Views/Home/About.cshtml
+++ b/EzSchool/Views/Home/About.cshtml
@@ -1,4 +1,217 @@
 ﻿@{
     ViewBag.Title = "DashBoard";
 }
-<h3>@ViewBag.Message</h3>
+<html>
+<head>
+    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        .card {
+            margin-bottom: 20px;
+        }
+
+        .card-body i {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .card-body p {
+            margin: 0;
+        }
+
+        .card-body {
+            text-align: center;
+        }
+
+            .card-body a {
+                color: inherit;
+                text-decoration: none;
+            }
+    </style>
+</head>
+<body>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Student's
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-3">
+                                <a href="#add-new-student">
+                                    <i class="fas fa-user-graduate text-primary"></i>
+                                    <p>Add New Student</p>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a href="#student-promote">
+                                    <i class="fas fa-user text-primary"></i>
+                                    <p>Student Promote</p>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a href="#students-exam">
+                                    <i class="fas fa-file-alt text-primary"></i>
+                                    <p>Students Exam</p>
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a href="#students-list">
+                                    <i class="fas fa-users text-primary"></i>
+                                    <p>Students List</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Employee's
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <a href="#add-new-employee">
+                                    <i class="fas fa-user-tie text-primary"></i>
+                                    <p>Add New Employee</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#staff-attendance">
+                                    <i class="fas fa-chart-line text-primary"></i>
+                                    <p>Staff Attendance</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#employee-list">
+                                    <i class="fas fa-users text-primary"></i>
+                                    <p>Employee List</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        User's
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <a href="#add-new-user">
+                                    <i class="fas fa-user text-primary"></i>
+                                    <p>Add New User</p>
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <a href="#users-list">
+                                    <i class="fas fa-users text-primary"></i>
+                                    <p>Users List</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Accounts and Finance
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <a href="#student-fee">
+                                    <i class="fas fa-dollar-sign text-primary"></i>
+                                    <p>Student Fee</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#staff-salaries">
+                                    <i class="fas fa-money-check-alt text-primary"></i>
+                                    <p>Staff Salaries</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#expenses">
+                                    <i class="fas fa-list text-primary"></i>
+                                    <p>Expenses</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Operator Access
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <a href="#generate-exam">
+                                    <i class="fas fa-tasks text-primary"></i>
+                                    <p>Ganarete Exam</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#student-attendance">
+                                    <i class="fas fa-list-alt text-primary"></i>
+                                    <p>Student Attendance</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#staff-attendance">
+                                    <i class="fas fa-list-alt text-primary"></i>
+                                    <p>Staff Attendance</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        Help & Support
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <a href="#email">
+                                    <i class="fas fa-envelope text-primary"></i>
+                                    <p>Email</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#staff-email">
+                                    <i class="fas fa-sms text-success"></i>
+                                    <p>Staff Email</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#videos">
+                                    <i class="fas fa-eye text-danger"></i>
+                                    <p>Videos</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
