--- a/EzSchool/Views/AttendanceTables/Index.cshtml
+++ b/EzSchool/Views/AttendanceTables/Index.cshtml
@@ -3,55 +3,70 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Submit Attendance", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SessionID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AttendDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AttendTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentTable.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClassTable.Name)
-        </th>
-        <th></th>
-    </tr>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Attandance Record</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>
+                            Student ID
+                        </th>
+                        <th>
+                            Class
+                        </th>
+                        <th>
+                            Student
+                        </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SessionID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AttendDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AttendTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentTable.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClassTable.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AttendanceID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AttendanceID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AttendanceID })
-        </td>
-    </tr>
-}
+                        <th>
+                            Attend Date
+                        </th>
+                        <th>
+                            Attend Time
+                        </th>
 
-</table>
+
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentID)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClassTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AttendDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AttendTime)
+                            </td>
+        
+
+                            <td class="btn-group">
+                                @Html.ActionLink("Edit", "Edit", new { id = item.AttendanceID }, new { @class = "btn btn-primary" })
+                                @Html.ActionLink("Details", "Details", new { id = item.AttendanceID }, new { @class = "btn btn-info" })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.AttendanceID }, new { @class = "btn btn-danger" })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+
+            </table>
+        </div>
+    </div>
+</div>
