--- a/EzSchool/Views/Shared/_Layout.cshtml
+++ b/EzSchool/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="~/Home/About">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -63,22 +63,26 @@
                 <div id="collapseStudent" class="collapse" aria-labelledby="headingStudent data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Student Registration:</h6>
-                        @Html.ActionLink("Students", "Index", "StudentTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("New Registration", "Create", "StudentTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Student List", "Index", "StudentTables", null, new { @class = "collapse-item" })
 
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Promotion:</h6>
-                        @Html.ActionLink("Student Promote", "Index", "StudentPromotTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Student Promote", "Create", "StudentPromotTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Promote List", "Index", "StudentPromotTables", null, new { @class = "collapse-item" })
 
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Fee's:</h6>
-                        @Html.ActionLink("Tution Fee", "Index", "SubmissionFeeTables", null, new { @class = "collapse-item" })
-                        @Html.ActionLink("Annual Fee", "Index", "StudentPromotTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Submit Tution Fee", "Create", "SubmissionFeeTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Tution Fee Records", "Index", "SubmissionFeeTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Annual Fee", "Index", "AnnualTables", null, new { @class = "collapse-item" })                      
 
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Attendance Reports:</h6>
-                        @Html.ActionLink("Student Attendance", "Index", "AttendanceTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Submit Attendance", "Create", "AttendanceTables", null, new { @class = "collapse-item" })
+                        @Html.ActionLink("Attendance Record", "Index", "AttendanceTables", null, new { @class = "collapse-item" })
 
                     </div>
                 </div>
