--- a/EzSchool/Views/StudentPromotTables/Index.cshtml
+++ b/EzSchool/Views/StudentPromotTables/Index.cshtml
@@ -7,63 +7,83 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Promote Student", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.PromoteDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AnnualFee)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsSubmit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ClassTable.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProgrameSessionTable.Details)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentTable.Name)
-        </th>
-        <th></th>
-    </tr>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">All Students</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>
+                            Promote ID 
+                        </th>
+                        <th>
+                            Student
+                        </th>
+                        <th>
+                            Promote Date
+                        </th>
+                        <th>
+                            Promotion Fee
+                        </th>
+                        <th>
+                            Promotion Status
+                        </th>
+                        <th>
+                            Fee Status
+                        </th>
+                        <th>
+                            Promote Class
+                        </th>
+                        <th>
+                             Class Section
+                        </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.PromoteDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AnnualFee)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsSubmit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClassTable.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProgrameSessionTable.Details)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentTable.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.StudentPromotID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.StudentPromotID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.StudentPromotID })
-        </td>
-    </tr>
-}
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentPromotID)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PromoteDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AnnualFee)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IsActive)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IsSubmit)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClassTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SectionTable.SectionName)
+                            </td>
 
-</table>
+                            <td class="btn-group">
+                                @Html.ActionLink("Edit", "Edit", new { id = item.StudentPromotID }, new { @class = "btn btn-primary" })
+                                @Html.ActionLink("Details", "Details", new { id = item.StudentPromotID }, new { @class = " btn btn-info" })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.StudentPromotID }, new {@class= "btn btn-danger"})
+                            </td>
+                        </tr>
+                    }
+                   </tbody>
+            </table>
+        </div>
+    </div>
+</div>
