--- a/EzSchool/Views/ExamMarksTables/Details.cshtml
+++ b/EzSchool/Views/ExamMarksTables/Details.cshtml
@@ -11,14 +11,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ClassSubjectID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ClassSubjectID)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.TotalMarks)
         </dt>
 
@@ -32,6 +24,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.ObtainMarks)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ClassSubjectTable.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClassSubjectTable.Name)
         </dd>
 
         <dt>
