--- a/EzSchool/Views/ExamMarksTables/Index.cshtml
+++ b/EzSchool/Views/ExamMarksTables/Index.cshtml
@@ -1,63 +1,83 @@
 ﻿@model IEnumerable<DatabaseAccess.ExamMarksTable>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Marks Sheets";
 }
-
-<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Marks Sheet", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ClassSubjectID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalMarks)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ObtainMarks)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ExamTable.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StudentTable.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserTable.FullName)
-        </th>
-        <th></th>
-    </tr>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Exam Marks Sheets</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>
+                            Student ID
+                        </th>
+                        <th>
+                           Exam 
+                        </th>
+                        <th>
+                            Student
+                        </th>
+                        <th>
+                            Subject
+                        </th>
+                        <th>
+                            Total Marks
+                        </th>
+                        <th>
+                            Obitan Marks
+                        </th>
+                        <th>
+                            User
+                        </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ClassSubjectID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalMarks)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ObtainMarks)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ExamTable.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StudentTable.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserTable.FullName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MarksID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MarksID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MarksID })
-        </td>
-    </tr>
-}
+                        <th>
+                            Action
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentID)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ExamTable.Title)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StudentTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClassSubjectTable.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TotalMarks)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ObtainMarks)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UserTable.FullName)
+                            </td>
 
-</table>
+                            <td class="btn-group">
+                                @Html.ActionLink("Edit", "Edit", new { id = item.MarksID }, new { @class = "btn btn-primary" })
+                                @Html.ActionLink("Details", "Details", new { id = item.MarksID }, new { @class = "btn btn-info" })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.MarksID }, new { @class = "btn btn-danger" })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
