--- a/EzSchool/Views/StaffTables/Index.cshtml
+++ b/EzSchool/Views/StaffTables/Index.cshtml
@@ -3,67 +3,83 @@
 @{
     ViewBag.Title = "Employees";
 }
-
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Add New Employee", "Create",null,new {@class = "btn btn-success"})
+    @Html.ActionLink("Staff Registeration", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            Full Name
-        </th>
-        <th>
-            Conntact No
-        </th>
-        <th>
-            Salary
-        </th>
-        <th>
-            Address
-        </th>
-        <th>
-            Photo
-        </th>
-        <th>
-            Status
-        </th>
-      
-        <th>Actions</th>
-    </tr>
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">All Employe's</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>
+                            Employee No
+                        </th>
+                        <th>
+                            Employee
+                        </th>
+                        <th>
+                            Conntact No
+                        </th>
+                        <th>
+                            Salary
+                        </th>
+                        <th>
+                            Address
+                        </th>
+                        <th>
+                            Photo
+                        </th>
+                        <th>
+                            Status
+                        </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContactNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BasicSalary)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @if (!string.IsNullOrEmpty(item.Photo))
-            {
-                <img src="@Url.Content(item.Photo)" alt="Photo" style="width:100px;heigt:150px;max-width:100%;height:auto" />
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-      
-        <td class="btn-group">
-            @Html.ActionLink("Edit", "Edit", new { id=item.StaffID }, new {@class = "btn btn-primary"}) 
-            @Html.ActionLink("Details", "Details", new { id=item.StaffID }, new {@class = "btn btn-info"})
-            @Html.ActionLink("Add Resume","CheckCV","Resume",new {id=item.StaffID}, new {@class = "btn btn-success"})
-            @*@Html.ActionLink("Delete", "Delete", new { id=item.StaffID }, new {@class = "btn btn-danger"})*@
-        </td>
-    </tr>
-}
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem=>item.StaffID)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ContactNo)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.BasicSalary)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Address)
+                            </td>
+                            <td>
+                                @if (!string.IsNullOrEmpty(item.Photo))
+                                {
+                                    <img src="@Url.Content(item.Photo)" alt="Photo" style="width:100px;heigt:150px;max-width:100%;height:auto" />
+                                }
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IsActive)
+                            </td>
 
-</table>
+                            <td class="btn-group">
+                                @Html.ActionLink("Edit", "Edit", new { id = item.StaffID }, new { @class = "btn btn-primary" })
+                                @Html.ActionLink("Details", "Details", new { id = item.StaffID }, new { @class = "btn btn-info" })
+                                @Html.ActionLink("Add Resume", "CheckCV", "Resume", new { id = item.StaffID }, new { @class = "btn btn-success" })
+                                @*@Html.ActionLink("Delete", "Delete", new { id=item.StaffID }, new {@class = "btn btn-danger"})*@
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+
+            </table>
+        </div>
+    </div>
+</div>
