--- a/EzSchool/Views/SessionTables/Index.cshtml
+++ b/EzSchool/Views/SessionTables/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>
@@ -26,7 +26,7 @@
                            End Date
                         </th>
                         <th>
-                            User
+                            Created By
                         </th>
                         <th>Actions</th>
                     </tr>
